--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "author": "Md. Abrar",
   "license": "ISC",
   "dependencies": {
-    "admin-lte": "^3.0.0-alpha.2",
-    "cors": "^2.8.4",
-    "cross-env": "^5.1.5",
-    "electron": "^1.8.6",
-    "express": "^4.16.3",
-    "express-rate-limit": "^2.11.0",
-    "mysql": "^2.15.0",
-    "helmet": "^3.12.1",
-    "jquery": "^3.3.1"
+    "admin-lte": "*",
+    "cors": "*",
+    "cross-env": "*",
+    "electron": "*",
+    "express": "*",
+    "express-rate-limit": "*",
+    "mysql": "*",
+    "helmet": "*",
+    "jquery": "*"
   },
   "devDependencies": {
-    "electron-packager": "^12.0.1",
-    "nodemon": "^1.17.4"
+    "electron-packager": "*",
+    "nodemon": "*"
   }
 }
