body parser added to packaged.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "*",
     "electron": "*",
     "express": "*",
+    "body-parser":"*",
     "express-rate-limit": "*",
     "mysql": "*",
     "helmet": "*",
